cmake_minimum_required(VERSION 2.9)
project(CodeCharge)

set(CMAKE_CXX_STANDARD 14)

add_executable(301_remove-invalid-parentheses leetcode/editor/cn/301_remove-invalid-parentheses.cpp)
set_target_properties(301_remove-invalid-parentheses PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
add_executable(1_two-sum leetcode/editor/cn/1_two-sum.cpp)
set_target_properties(1_two-sum PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
add_executable(869_reordered-power-of-2 leetcode/editor/cn/869_reordered-power-of-2.cpp)
set_target_properties(869_reordered-power-of-2 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
add_executable(Offer_05_ti-huan-kong-ge-lcof "leetcode/editor/cn/Offer_05_ti-huan-kong-ge-lcof.cpp")
set_target_properties(Offer_05_ti-huan-kong-ge-lcof PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
add_executable(Offer_09_yong-liang-ge-zhan-shi-xian-dui-lie-lcof leetcode/editor/cn/Offer_09_yong-liang-ge-zhan-shi-xian-dui-lie-lcof.cpp)
set_target_properties(Offer_09_yong-liang-ge-zhan-shi-xian-dui-lie-lcof PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
add_executable(Offer_20_biao-shi-shu-zhi-de-zi-fu-chuan-lcof leetcode/editor/cn/Offer_20_biao-shi-shu-zhi-de-zi-fu-chuan-lcof.cpp)
set_target_properties(Offer_20_biao-shi-shu-zhi-de-zi-fu-chuan-lcof PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
add_executable(500_keyboard-row leetcode/editor/cn/500_keyboard-row.cpp)
set_target_properties(500_keyboard-row PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
add_executable(138_copy-list-with-random-pointer leetcode/editor/cn/138_copy-list-with-random-pointer.cpp)
set_target_properties(138_copy-list-with-random-pointer PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
add_executable(1218_longest-arithmetic-subsequence-of-given-difference leetcode/editor/cn/1218_longest-arithmetic-subsequence-of-given-difference.cpp)
set_target_properties(1218_longest-arithmetic-subsequence-of-given-difference PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")