cmake_minimum_required(VERSION 2.9)
project(CodeCharge)

#include_directories("/usr/include/eigen3")

set(CMAKE_CXX_STANDARD 17)

add_executable(301_remove-invalid-parentheses leetcode/editor/cn/301_remove-invalid-parentheses.cpp)
set_target_properties(301_remove-invalid-parentheses PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
add_executable(1_two-sum leetcode/editor/cn/1_two-sum.cpp)
set_target_properties(1_two-sum PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
add_executable(869_reordered-power-of-2 leetcode/editor/cn/869_reordered-power-of-2.cpp)
set_target_properties(869_reordered-power-of-2 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
add_executable(Offer_05_ti-huan-kong-ge-lcof "leetcode/editor/cn/Offer_05_ti-huan-kong-ge-lcof.cpp")
set_target_properties(Offer_05_ti-huan-kong-ge-lcof PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
add_executable(Offer_09_yong-liang-ge-zhan-shi-xian-dui-lie-lcof leetcode/editor/cn/Offer_09_yong-liang-ge-zhan-shi-xian-dui-lie-lcof.cpp)
set_target_properties(Offer_09_yong-liang-ge-zhan-shi-xian-dui-lie-lcof PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
add_executable(500_keyboard-row leetcode/editor/cn/500_keyboard-row.cpp)
set_target_properties(500_keyboard-row PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
add_executable(138_copy-list-with-random-pointer leetcode/editor/cn/138_copy-list-with-random-pointer.cpp)
set_target_properties(138_copy-list-with-random-pointer PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
add_executable(1218_longest-arithmetic-subsequence-of-given-difference leetcode/editor/cn/1218_longest-arithmetic-subsequence-of-given-difference.cpp)
set_target_properties(1218_longest-arithmetic-subsequence-of-given-difference PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
add_executable(8_string-to-integer-atoi leetcode/editor/cn/8_string-to-integer-atoi.cpp)
set_target_properties(8_string-to-integer-atoi PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
add_executable(318_maximum-product-of-word-lengths leetcode/editor/cn/318_maximum-product-of-word-lengths.cpp)
set_target_properties(318_maximum-product-of-word-lengths PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")

#add_executable(rot2cayley src/rot2cayley.cpp)
#add_executable(cayley2rot src/cayley2rot.cpp)
#add_executable(Offer_47_li-wu-de-zui-da-jie-zhi-lcof leetcode/editor/cn/Offer_47_li-wu-de-zui-da-jie-zhi-lcof.cpp)
#add_executable(3_longest-substring-without-repeating-characters leetcode/editor/cn/3_longest-substring-without-repeating-characters.cpp)